syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User{
    rpc GetUserList (Pageinfo) returns (UserListResponse); //用户列表
    rpc GetUserByMobile (MobileRequest) returns (UserInfoResponse);//通过mobile查询用户
    rpc GetUserById (IdRequest) returns (UserInfoResponse);//通过id查询用户
    rpc CreateUser (CreateUserInfoRequest) returns (UserInfoResponse); //添加用户
    rpc UpdateUser (UpdateUserInfoRequest) returns (google.protobuf.Empty); //更新用户
    rpc CheckPassword (CheckPasswordInfoRequest) returns (CheckResponse); //检查密码
}

message CheckPasswordInfoRequest{
    string password = 1;
    string encryptedPassword = 2;
}

message CheckResponse{
    bool success = 1;
}

message Pageinfo{
    uint32 Pn = 1;
    uint32 Psize = 2;
}

message IdRequest{
    int32 id = 1;
}

message MobileRequest{
    string mobile = 1;
}

message UpdateUserInfoRequest{
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
}

message UserInfoResponse{
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickName = 4;
    uint32 birthday = 5;
    string gender = 6;
    int32 role = 7;
}

message CreateUserInfoRequest{
    string nickName = 1;
    string password = 2;
    string mobile = 3;
}

message UserListResponse{
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}